# PyCantus_anonym

./: README.md  pyproject.toml  tutorial.ipynb
docs/source/: conf.py
pycantus/: data.py
pycantus/dataloaders/: loader.py
pycantus/filtration/: filter.py
pycantus/models/: chant.py  corpus.py  melody.py  source.py
