[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycantus"
version = "0.0.4"
dependencies = [
  "pandas==2.2.2",
  "requests==2.31.0",
  "PyYAML==6.0.2"
]
requires-python = ">=3.10"
authors = [
  {name = "Anna Dvorakova", email = "anna.dvorakova332@student.cuni.XXXX-6"},
  {name = "Tim Eipert", email = "tim.eipert@uni-wuerzburg.XXXX-6"},
  {name = "Jan Hajic jr.", email = "hajicj@ufal.mff.cuni.XXXX-6"},
  {name = "Vojtech Lanz", email = "lanz@ufal.mff.cuni.XXXX-6"},
]
maintainers = [
  {name = "Tim Eipert", email = "tim.eipert@uni-wuerzburg.XXXX-6"},
  {name = "Jan Hajic jr.", email = "hajicj@ufal.mff.cuni.XXXX-6"},
  {name = "Vojtech Lanz", email = "lanz@ufal.mff.cuni.XXXX-6"},
  {name = "Anna Dvorakova", email = "anna.dvorakova332@student.cuni.XXXX-6"},
]
description = "PyCantus: A Python library designed to enhance accessibility of Gregorian chants for both coders and non-coders."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Gregorian Chant", "Cantus"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

[project.optional-dependencies]
examples = [

]
tests = [

]

[project.urls]
Homepage = https://anonymous.4open.science/r/PyCantus_anonym-52DD/
Documentation = https://anonymous.4open.science/r/PyCantus_anonym-52DD/docs
Repository = https://anonymous.4open.science/r/PyCantus_anonym-52DD

[tool.setuptools.packages.find]
include = ["pycantus"]
